@@ -79,6 +79,10 @@ property of the main buildfile.</p>
 
 <p>Note that &quot;builddocs&quot; is not the filename, but the name attribute
 present in the imported project tag.</p>
+  <p>
+    If import file does not have a name attribute, the ant.file.projectname
+    property will not be set.
+  </p>
 
 <h4>Resolving files against the imported file</h4>
 
